# next-departures

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yaml
src/: main.rs  routes.rs  sncf.rs  views.rs
templates/: base.html  dashboard.html  index.html  search-result.html
